--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,6 @@
 {
     "parser": "babel-eslint",
     "rules": {
-        "indent": [
-            2,
-            4
-        ],
         "quotes": [
             2,
             "single"
@@ -21,7 +17,8 @@
     "env": {
         "es6": true,
         "node": true,
-        "browser": true
+        "browser": true,
+        "mocha": true
     },
     "extends": "eslint:recommended"
 }
