--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-cli": "^6.3.17",
     "babel-core": "^6.3.21",
     "babel-preset-es2015": "^6.3.13",
+    "babel-register": "^6.4.3",
     "chai": "^3.4.1",
     "chai-immutable": "^1.5.3",
     "mocha": "^2.3.4"
